k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-portfolio
spec:
  selector:
    app.kubernetes.io/name: cv-portfolio
  ports:
    - name: http
      port: 80
      targetPort: http
