k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-portfolio
spec:
  rules:
    - host: cv.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cv-portfolio
                port:
                  name: http
